# 5130904_40003_1

./: .gitignore
abramenko.sofia/T2/: DataStruct.cpp  DataStruct.h  main.cpp
denisov.ehlers.edwin/coursework/: CMakeLists.txt  main.cpp
denisov.ehlers.edwin/coursework/include/: ByteEntry.h  Command.h  Data.h  Decoder.h  Encoder.h  Table.h  bit_utils.h  file_io.h  types.h
denisov.ehlers.edwin/coursework/src/: ByteEntry.cpp  Command.cpp  Data.cpp  Decoder.cpp  Encoder.cpp  StreamGuard.cpp  Table.cpp  bit_utils.cpp  file_io.cpp
denisov.ehlers.edwin/coursework/tests/: BitUtilsTest.cpp  DataTest.cpp  DecoderTest.cpp  EncoderTest.cpp  FileIOTest.cpp  TableTest.cpp  allTests.cpp
ivantsov.egor/T3/: main.cpp
viktovsky.alexander/T0/: main.cpp
vitkovsky.alexander/T3/: BaseStructs.h  Commands.h  Utils.h  main.cpp
